Version 2.2.008
    Fixed alchemy potions not upgrading correctly (This will only affect new potions made, see notes)
    Fixed a bug where alchemy potions had italicized names
    Fixed some exceptions that could happen with parties disabled (thanks IAISI)

    NOTES:
    mcMMO-exclusive Potions (haste, etc) made on version 2.2.007 of mcMMO will not upgrade correctly, you'll just have to make new ones. Sorry for the inconvenience.
    Alchemy potions will now be brewed as type "Mundane" behind the scenes, this used to be Uncraftable/Water. This led to some issues. So I've changed it to be Mundane.

Version 2.2.007
    Compatibility with the 1.20.5 / 1.20.6 MC Update
    Fixed bug where Alchemy was not brewing certain potions (haste, etc)
    Tree Feller no longer restricts how many saplings can drop
    Tree Feller now drops leaves 25% of the time (up from 10%)
    Alchemy XP has been DRAMATICALLY increased, it was extremely grindy by default
    Alchemy experience values in experience.yml are now found under 'Experience_Values.Alchemy.Potion_Brewing'
    Fixed bug where the probability of success of Graceful Roll was not being calculated correctly
    Fixed bug where Green Thumb did not replant if seed was in the off hand
    Added armadillo to combat experience in experience.yml

    NOTES:
    While fixing various Alchemy bugs, I noticed Alchemy leveled SUPER slow, I have increased it dramatically. Feel free to change it back by modifying the new values in experience.yml
    I did my best to keep mcMMO compatible with older versions of Minecraft for this update.
    This update to MC was quite large, with breaking changes to a lot of code relating to Alchemy, and some other things.
    I expect there to be bugs, please report them on GitHub or Discord, but preferably GitHub.
    I will be working on fixing these bugs as they come in, so please be patient.
Version 2.2.006
    Added new config custom_item_support.yml